8353190: remove unnecessary option `--enable-native-access=ALL-UNNAMED`